[package]
name = "cli_graph"
version = "0.2.0"
authors = ["jamie <jamieapps101@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Small crate to generate simple CLI graphs"
categories = ["command-line-utilities","development-tools::debugging", "visualization"]
readme = "README.md"


[dependencies]

